envrionment/longhorn/oauth2-ingress-longhorn-dashboard.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
    ingress.kubernetes.io/proxy-body-size: "1024m"
    nginx.ingress.kubernetes.io/proxy-body-size: "1024m"
    cert-manager.io/issuer: step-cluster-issuer
    cert-manager.io/issuer-group: certmanager.step.sm
    cert-manager.io/issuer-kind: StepClusterIssuer
    external-dns.alpha.kubernetes.io/hostname: longhorn.home.local
spec:
  ingressClassName: nginx
  rules:
  - host: longhorn.home.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
  tls:
  - hosts:
    -  longhorn.home.local
    secretName:  longhorn.home.local-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress-oauth2
  namespace: longhorn-system
  annotations:
    ingress.kubernetes.io/proxy-body-size: "1024m"
    nginx.ingress.kubernetes.io/proxy-body-size: "1024m"
    cert-manager.io/issuer: step-cluster-issuer
    cert-manager.io/issuer-group: certmanager.step.sm
    cert-manager.io/issuer-kind: StepClusterIssuer
    external-dns.alpha.kubernetes.io/hostname: longhorn.home.local
spec:
  ingressClassName: nginx
  rules:
  - host: longhorn.home.local
    http:
      paths:
      - path: /oauth2
        pathType: Prefix
        backend:
          service:
            name: oauth2-proxy
            port:
              number: 4180
  tls:
  - hosts:
    -  longhorn.home.local
    secretName:  longhorn.home.local-tls
